--- a/royale/templates/classes.html
+++ b/royale/templates/classes.html
@@ -3,23 +3,36 @@
 {% block content %}
 <br><br>
 <div id="classes">
+  <div class="container">
+    
 
-<div class="container">
-  <br><br><br><br>
-    <div class="row">
-        <div class="col-md-4">
-          <img src="https://cdn.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_300/http://royalandrich.com/wp-content/uploads/2019/11/pdi-slider-image-1-300x199.jpg" width="500" height="300"  alt="">
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-4">
-            <h1><b>What we offer</b></h1>
-            <p style="color: black;" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem totam magni, laudantium sit porro quisquam harum quis consequatur aspernatur deleniti deserunt accusamus quia ipsum commodi praesentium nisi eum esse rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae veniam doloribus eveniet alias, voluptatibus delectus iusto iste? Cum dolorem, consectetur expedita ab veritatis vel fugit, mollitia illum perferendis obcaecati voluptate. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel cumque reprehenderit excepturi consequatur nisi veniam consequuntur? Tenetur maxime modi neque, reprehenderit minus, dolores facere nesciunt aliquid iure asperiores, autem ratione? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nemo obcaecati pariatur odit sunt eum possimus dolorum. Autem sed, cupiditate ullam porro laborum atque quaerat tempore eveniet nostrum provident accusamus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod, esse repudiandae minus sint magni, voluptatibus nam et ducimus blanditiis dolorum maiores accusamus impedit, repellat ipsam doloremque quia ullam praesentium! </p>
+    <br><br><br> 
+    <div class="row" id="offers" >
+      <div class="offers">
+        <br><br>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="https://cdn.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_300/http://royalandrich.com/wp-content/uploads/2019/11/pdi-slider-image-1-300x199.jpg" width="500" height="300"  alt="">
           </div>
-        <div class="col-md-2"></div>
+          
+          <div class="col-md-6">
+              <h1><b>What we offer</b></h1>
+              <p style="color: black;" >It is a school with a different goal from what we are used to in traditional classrooms. PDI is practical in its approach and offers no sit-in examinations; we believe that life itself is a classroom with its own exams that are ongoing until we transition from this planet. However, we write term papers but in the form of 5-year strategic plans. The plans are life goals that our students pursue over the years. In our 9 years of operation, we have had the joy of our Alumni sharing their accomplishments after completing our programs 5 years or later having achieved over 80% of their goals.
+
+                We run programs from as early as children aged 9 years, teens, young adults, adults and senior citizens (retired).
+                
+                For the various age groups, the classes are experiential, discussion-based and everyone becomes a LIFElong learner. We need to question life, learn life principles from experts and also hear what God’s perspective is on the issues that all of us find ourselves in from time to time.
+                
+                Every student has to learn more about whose they are, who they are, why they are and how to bring out who and why with friends, family and the society. </p>
+            </div>
+       
+        </div>
+        </div>
     </div>
-    <br><br><br>
-    <div class="row">
-        <div class="col-md-4">
+  </div>
+    <br><br>  
+    <div class="row offerss " id="offerss" >
+        <div id="first" class="col-md-4">
             <div class="card" id="card" style="width: 18rem;">
                 <div class="card-body">
                   <h5 class="card-title">TRM for Children</h5>
@@ -55,7 +68,7 @@
         <div class="col-md-4">
             <div class="card" id="card3" style="width: 18rem;">
                 <div class="card-body">
-                  <h5 class="card-title">.TRM for Young Adults</h5>
+                  <h5 class="card-title">TRM for Young Adults</h5>
                   <h6 class="card-subtitle mb-2 text-muted">This is a course for young adults eg:campus students</h6>
                   <p class="card-text">
                     The majority of the Kenyan population is made up of young adults who are in universities, colleges or working as they study. This program is tailored to transform the youth to think differently and to position them for the global changes inthe job marketand life in general.
@@ -66,9 +79,13 @@
               </div>
         </div>
     </div>
-    <br><br>
-    <div class="row">
-        <div class="col-md-4">
+    <div class="join">
+      <h1 style="margin-left: 450px;" > JOIN US TODAY </h1><br>
+      <button type="button" style="margin-left: 490px;"  class="btn btn-dark  btn-banner">Get started</button>
+    </div>
+    
+    <div class="row offerss ">
+        <div id="last" class="col-md-4">
             <div class="card"  id="card4" style="width: 18rem;">
                 <div class="card-body">
                   <h5 class="card-title">TRM for Adults</h5>
@@ -113,7 +130,6 @@
         </div>
     </div>
 </div>
-<br><br><br><br>
 </div>
 
 {% endblock %}
