--- a/royale/templates/base/footer.html
+++ b/royale/templates/base/footer.html
@@ -2,40 +2,44 @@
 
 			<div class="footer-left">
 
-				<h3>Company<span>logo</span></h3>
+				<a class="navbar-brand" href="/"><span>Personal</span>Development<span>Institute</span> </a>
 
 				<p class="footer-links">
 					<a href="#" class="link-1">Home</a>
 					
-					<a href="#">Blog</a>
+					<a href="/contact">Contact Us</a>
 				
-					<a href="#">Pricing</a>
+					<a href="/classes">Classes</a>
 				
-					<a href="#">About</a>
-					
-					<a href="#">Faq</a>
-					
-					<a href="#">Contact</a>
 				</p>
 
-				<p class="footer-company-name">Company Name © 2015</p>
+				<p class="footer-company-name">PID © 2020</p>
 			</div>
 
 			<div class="footer-center">
 
 				<div>
+
 					<i class="fa fa-map-marker"></i>
-					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+					<p><span>Kingdom Business Network,</span> Kabarnet Road, off Ngong Road</p>
 				</div>
 
 				<div>
-					<i class="fa fa-phone"></i>
-					<p>+1.555.555.5555</p>
+					<a href="tel:+254722 842 938">
+						<i class="fa fa-phone"></i>
+					<p>0722 842 938</p>
+					</a>
+				</div>
+				<div>
+					<a href="tel:+254722 842 938">
+						<i class="fa fa-phone"></i>
+					<p>0722 842 938</p>
+					</a>
 				</div>
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">support@company.com</a></p>
+					<p><a href="mailto:info@pdi.or.ke">info@pdi.or.ke</a></p>
 				</div>
 
 			</div>
@@ -43,8 +47,8 @@
 			<div class="footer-right">
 
 				<p class="footer-company-about">
-					<span>About the company</span>
-					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+					<span>About PID </span>
+					Personal Development Institute has a mission to unlock what is innately within every human being. We unlock human capital through training, teaching & coaching.
 				</p>
 
 				<div class="footer-icons">
@@ -52,7 +56,7 @@
 					<a href="#"><i class="fab fa-facebook"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
 					<a href="#"><i class="fab fa-linkedin"></i></a>
-					<a href="#"><i class="fab fa-whatsapp"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
 
 				</div>
 
