--- a/royale/templates/base/navbar.html
+++ b/royale/templates/base/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" id="banner">
     <div class="container">
     <!-- Brand -->
-    <a class="navbar-brand" href="/"><span>First</span>Last</a>
+    <a class="navbar-brand" href="/"><span>Personal</span>Development<span>Institute</span> </a>
   
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -14,13 +14,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
+        
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}#desc">About</a>
-        </li>
+          <a class="nav-link" href="/classes">Classes</a>
+        </li> 
+      
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact Us</a>
         </li> 
-       
+      
       </ul>
     </div>
     </div>
