--- a/royale/templates/index.html
+++ b/royale/templates/index.html
@@ -40,9 +40,9 @@
             <a class="dropdown-item" href="{% url 'classes' %}#last">TRM for the Retired to Refired</a>
           </div>
         </li>
-                                  <li class="nav-item">
-                                    <a class="nav-link" href="/contact">Contact Us</a>
-                                  </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="/contact">Contact Us</a>
+        </li> 
       </ul>
     </div>
     </div>
@@ -53,11 +53,11 @@
       
       <div class="banner-text">      
        <div class="col-md-4">
-        <img class="display_image" src="{% static 'images/image.jpeg' %}" alt="">
+        <img class="display_image" style="margin-right: 1000px;" src="{% static 'images/image.jpeg' %}" alt="">
        </div>
        <div class="col-md-12">
-        <div class="banner-heading">
-            <div class="row" style="color:white" >Welcome to Personal Development Institute whose mission is to unlock what is innately within every human being. We unlock human capital through training, teaching & coaching.
+        <div class="banner-heading" style="opacity: 0; margin-left: 1000px;" >
+            <div class="row welc " style="color:white" >Welcome to Personal Development Institute whose mission is to unlock what is innately within every human being. We unlock human capital through training, teaching & coaching.
               Personal Development Institute has been in operation since 7th April, 2010. We have run various programs over the years reaching different age groups in Kenya and beyond.              
               We are a market place platform that has helped many individuals to discover & clarify their life’s purpose, passion & unique gifts  </div>
         </div>
