--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -149,6 +149,7 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
   /* font-size: 10px; */
   margin-bottom: 700px;
   line-height: 30px;
+  opacity: 0;
   margin-bottom: 20px;
 }
 .banner-sub-heading{
@@ -174,7 +175,7 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
  
 .display_image{
   margin-left: 50px;
-  margin-top: 100px;
+  margin-top: -500px;
 }
 
 /* .image{
