--- a/royale/templates/contact.html
+++ b/royale/templates/contact.html
@@ -10,7 +10,7 @@
             <!-- Empty div -->
             <br><br><br><br>
             
-            <div class="col-md-4 col-xs-4 col-sm-4" >
+            <div class="col-md-4 col-xs-4 col-sm-4 cont" >
                 <div class="panel panel-default"style="align-self: center;">
                     
                     
