--- a/royale/templates/index.html
+++ b/royale/templates/index.html
@@ -57,6 +57,7 @@
        </div>
        <div class="col-md-12">
         <div class="banner-heading" style="opacity: 0; margin-left: 1000px;" >
+          <br><br>
             <div class="row welc " style="color:white" >Welcome to Personal Development Institute whose mission is to unlock what is innately within every human being. We unlock human capital through training, teaching & coaching.
               Personal Development Institute has been in operation since 7th April, 2010. We have run various programs over the years reaching different age groups in Kenya and beyond.              
               We are a market place platform that has helped many individuals to discover & clarify their life’s purpose, passion & unique gifts  </div>
@@ -73,7 +74,123 @@
 </div>
 </div>
   </div>
+<div class="categories">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <br><br><br>
+        <form action="" method="post">
+          <div class="form-group">
+            <select type="submit" class="form-control catss" id="exampleFormControlSelect1">
+              <option value="1" >Choose Category</option>
+              <option value="2" >TRM for Children</option>
+              <option value="3" >TRM for Teens</option>
+              <option value="4" >TRM for Young Adults</option>
+              <option value="5" >TRM for Adults</option>
+              <option value="6" >TRM for Entrepreneurs</option>
+              <option value="7" >TRM for the retired</option>
+            </select>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row" id="offerss" >
+      <div id="first" class="col-md-4">
+          <div class="card child" id="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for Children</h5>
+                <h6 class="card-subtitle mb-2 text-muted">This is a course for children aged between 9-13 years.</h6>
+                <p class="card-text">Children need to develop a concept of life skills to go hand in hand with academic knowledge. This course is designed to help children understand who they are and why they and others, think and act the way they do.
 
+                  Life skills have a major impact on a child’s overall performance. It’s a great benefit when children understand their personality styles and how to communicate with family members and other people.
+                  
+                  Self-Awareness will be strengthened through the use of the Children’s Profile.
+                  
+                  Beyond grades, children will be empowered to appreciate similarities and differences in one another.</p>
+               
+              </div>
+            </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card teen" id="card2" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for Teens</h5>
+                <h6 class="card-subtitle mb-2 text-muted">This is a course for teenagers</h6>
+                <p class="card-text">
+                  The teenage years can be a difficult time to navigate through both for the teens and their parents. At PDI we believe the narrative can be changed through life skills.
+
+                  This program is tailored for the teen who is answering questions about their identity and future. We teach Self Awareness, Emotional Intelligence, Everyday Leadership skills, Communication Skills, Career and general Personal Development skills.We use assessment tools to enhance the training.
+                  
+                  We have also worked with teenagers who face the challenge of drug addiction and lost focus in their academics as a result.
+                  
+                  TRM for Teens is a powerful program because all lasting beings in the mind.
+                </p> 
+              </div>
+            </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card youngAdult" id="card3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for Young Adults</h5>
+                <h6 class="card-subtitle mb-2 text-muted">This is a course for young adults eg:campus students</h6>
+                <p class="card-text">
+                  The majority of the Kenyan population is made up of young adults who are in universities, colleges or working as they study. This program is tailored to transform the youth to think differently and to position them for the global changes inthe job marketand life in general.
+
+                  We believe that our youth can thrive while they are more self-aware. We teach them to understand their life purpose, how to turn their passion into profitable ventures, emotional, financial, spiritual and social intelligence & how to engage in clean fun.
+                </p>
+              </div>
+            </div>
+      </div>
+  </div>  
+  <div class="row">
+    <br><br>
+      <div id="last" class="col-md-4">
+          <div class="card Adults"  id="card4" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for Adults</h5>
+                <h6 class="card-subtitle mb-2 text-muted">A course unit for adults</h6>
+                <p class="card-text">Through the TRM for Adults class, many destinies have been rebirthed and reshaped.This has been our major clientele base for the past 9 years because anyone can redefine the trajectory of your life at any season in life.
+
+                  The adults have the advantage of reflecting on their past experiences. This helps them to unlearn, learn and relearn.
+                  
+                  We havemany transformational stories from the adults that have gone through this class. The most celebrated modules in TRM adults are Life Purpose, Financial, Spiritual & Emotional Intelligence; Health and Wellness, writing of the 5 year strategic plan.</p>
+                
+              </div>
+            </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card entrepreneur" id="card5" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for Entrepreneurs</h5>
+                <h6 class="card-subtitle mb-2 text-muted">A course unit for businesspeople and entrepreneurs</h6>
+                <p class="card-text">This is tailored for those transitioning from formal employment and for those repositioning ongoing businesses.The dynamics in the business world require constant learning and the ability to adapt to change.
+
+                  The modules taught in this course can be summed up as Thinking for a Change. This is purely one-to-one coaching that is client-driven based on the business needs.
+                  
+                  As a result ofretrenchment, forced resignationand dismissal, some people have been forced to resign; and many find themselves in the waters of entrepreneurship to meet their day-to-day financial needs. This coaching is applicable to them as well.
+                  
+                  Whether you are a seasoned entrepreneur or a start-up, this coaching will provide the much needed support, encouragement and accountability.</p>
+                
+              </div>
+            </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card retired " id="card6" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">TRM for the Retired to Refired</h5>
+                <h6 class="card-subtitle mb-2 text-muted">A unit for retired personel</h6>
+                <p class="card-text">Retiring from formal employment can create some distresseven when one is well prepared and has gone through formal retirement programs that are provided by employers.
+
+                  This program is tailored to redefine the next phase of life after retirement. A meaningful and power-packed adventure is possible after retirement. At PDI we believe in being refired not retired.
+                  
+                  We have many success stories of those who came as retirees and refired their lives. You can live your best life fulfilling life goals and impacting generations through God-given purpose.</p>
+              </div>
+            </div>
+      </div>
+  </div>
+</div>
 <h4 class="ui horizontal header divider" id="divider suscribe">
   <a href="{% url 'home' %}#divider">Be the first to know</a>
 </h4>
