--- a/royale/templates/base/navbar.html
+++ b/royale/templates/base/navbar.html
@@ -16,7 +16,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="/classes">Classes</a>
+          <a class="nav-link" href="/classes/0/">Classes</a>
         </li> 
       
         <li class="nav-item">
