--- a/static/css/ownNavbar.css
+++ b/static/css/ownNavbar.css
@@ -51,9 +51,21 @@
 
   .card{
    /* background-color: grey; */
-   color: honeydew;
-
+   /* color: honeydew; */
+   /* height:400px; */
 }
+#class{
+   background-image: url('https://images.unsplash.com/photo-1581985283743-abc20b6d8993?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+   padding: 50px;
+   background-blend-mode: darken;
+   background-attachment: fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+.card-title:hover{
+   color: white;
+}
+
 .card:hover{
    background-color: black;
    color: white;
@@ -74,6 +86,7 @@
 	background-size: cover;
 	position: relative;
    height: 550px;
+   /* padding: 50px; */
 }
 #offers:before{
    /* background-image: url(''); */
@@ -84,9 +97,7 @@
 	left: 0;
 
 }
-.offers{
-   padding: 70px;
-}
+
 .join{
    padding: 80px;
    background-color: black;
@@ -97,4 +108,15 @@
 }
 .cont{
    margin-left: 2000px;
+}
+.children{
+   display: none;
+}
+.welc{
+   background-color: #C79519;
+   /* padding-left: 10px; */
+   margin-top: -84px;
+   height: 400px;
+   width: 800px;
+   /* margin-left: 900px; */
 }
