--- a/royale/templates/base/footer.html
+++ b/royale/templates/base/footer.html
@@ -2,15 +2,13 @@
 
 			<div class="footer-left">
 
-				<a class="navbar-brand" href="/"><span>Personal</span>Development<span>Institute</span> </a>
+				<a class="navbar-brand" href="/">
+					<img src="https://cdn.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_81,h_149/http://royalandrich.com/wp-content/uploads/2019/11/Capture.png" alt="">
+				</a>
 
 				<p class="footer-links">
-					<a href="#" class="link-1">Home</a>
-					
-					<a href="/contact">Contact Us</a>
-				
-					<a href="/classes">Classes</a>
-				
+					<a href="/" class="link-1">Home</a>
+					<a href="/contact">Contact Us</a>			
 				</p>
 
 				<p class="footer-company-name">PID © 2020</p>
