--- a/royale/templates/index.html
+++ b/royale/templates/index.html
@@ -73,7 +73,7 @@
        </div>
     <div class="col-md-12">
       <br>
-      <a href="/classes/0/">
+      <a href="{% url 'home' %}#first">
       <button type="button"  class=" button btn btn-warning text-dark btn-banner">Get started</button>
       </a>
     </div>
